using pattern matching and methodreference